# pianobooster

Misc/: ToDo.txt
PianoBooster/: CMakeLists.txt
PianoBooster/config/: default.cfg  grandstaff.cfg
PianoBooster/src/: CMakeLists.txt  Cfg.cpp  Cfg.h  Chord.h  Conductor.cpp  Conductor.h  Draw.cpp  GlView.cpp  GlView.h  GuiKeyboardSetupDialog.cpp  GuiMidiSetupDialog.cpp  MidiDeviceRt.cpp  MidiTrack.cpp  Notation.cpp  Piano.cpp  QtWindow.cpp  QtWindow.h  Score.cpp  Scroll.cpp  Symbol.h  Tempo.cpp  Tempo.h  TrackList.cpp  Util.cpp
